# mask-to-scribble

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/copilot/: 00_project_scope.md  40_api_and_package.md  50_label_and_thickness.md  60_marimo_usage.md  90_prohibitions.md
.github/instructions/: 00_project_scope.instructions.md  10_scribble_philosophy.instructions.md  20_algorithm_design.instructions.md  30_determinism_and_repro.instructions.md  40_api_and_package.instructions.md  50_label_and_thickness.instructions.md  60_marimo_usage.instructions.md  90_prohibitions.instructions.md  copilot-instructions.instructions.md
notebooks/: mvtec.py  visualize_scribbles.py
src/mask_to_scribble/: __init__.py  generator.py  geometry.py  param_utils.py  rendering.py  routing.py  sampling.py  types.py
tests/: test_basic.py
