[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mask-to-scribble"
version = "0.1.0"
description = "Generate human-like scribble annotations from defect masks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "opencv-contrib-python-headless>=4.12.0.88",
  "pyzmq>=27.1.0",
  "scikit-image>=0.26.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/mask_to_scribble"]

[tool.ruff]
extend-exclude = ["__pycache__", "build", "dist"]
target-version = "py312"
line-length = 100

select = ["ALL"]
ignore = [
  "D1",     # undocumented
  "TD001",  # invalid todo tag
  "TD002",  # missing todo author
  "TD003",  # missing todo link
  "PD011",  # pandas use of dot values
  "FBT001", # boolean-type-hint-positional-argument
  "FBT002", # boolean-default-value-positional-argument
]
lint.allowed-confusables = ["（", "）"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN201", "N802", "ARG"]

[dependency-groups]
dev = [
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "plotly>=6.5.0",
    "ruff>=0.14.10",
    "ty>=0.0.9",
]
